Fix button alignment & its html element

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -104,6 +104,9 @@ nav > h1 {
     box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.5);
     font-size: medium;
     font-weight: 500;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .mainButton:hover {
@@ -152,6 +155,11 @@ nav > h1 {
 .buttonAlignRight {
     display: flex;
     justify-content: end;
+}
+
+.buttonAlignLeft {
+    display: flex;
+    justify-content: start;
 }
 
 .whatIDo {
